<resources>
    <string name="app_name">Valorant App</string>
    <!-- filtros  personajes-->

    <string name="duelist">Duelist</string>
    <string name="sentinel">Sentinel</string>
    <string name="initiator">Initiator</string>
    <string name="controller">Controller</string>
    <string name="pistols" translatable="false">Pistols</string>
    <string name="smg" translatable="false">SMG</string>
    <string name="shotgun" translatable="false">Shotgun</string>
    <string name="heavy" translatable="false">Heavy</string>
    <string name="rifle" translatable="false">Rifle</string>
    <string name="sniper" translatable="false">Sniper</string>
    <!-- nav bar-->
    <string name="agents">Agents</string>
    <string name="weapons">Weapons</string>
    <string name="skins">Skins</string>

    <!-- agent details-->
    <string name="abilities">Abilities</string>


    <string name="stats">Stats</string>
    <string name="fire_rate">Fire rate</string>
    <string name="equip_speed">Equip Speed</string>
    <string name="reload_speed">Reload Speed</string>
    <string name="magazine">Magazine</string>

    <string name="fire_rate_value"> %1$s Rds/Sec</string>
    <string name="equip_speed_value">%1$s Sec</string>
    <string name="reload_speed_value">%1$s Sec</string>
    <string name="magazine_value" translatable="false">%1$s Rds</string>
    <string name="agent_details">Agent Details</string>
    <string name="weapon_details">Weapon Details</string>
    <string name="no_internet">No data received, check your connection</string>

    <string-array name="weapon_types">

        <item>All</item>
        <item>Classic</item>
        <item>Sheriff</item>
        <item>Ghost</item>
        <item>Frenzy</item>
        <item>Shorty</item>
        <item>Spectre</item>
        <item>Stinger</item>
        <item>Judge</item>
        <item>Bucky</item>
        <item>Odin</item>
        <item>Ares</item>
        <item>Vandal</item>
        <item>Bulldog</item>
        <item>Phantom</item>
        <item>Guardian</item>
        <item>Operator</item>
        <item>Marshal</item>




    </string-array>
</resources>