<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.fragments.AgentsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAgents"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:paddingBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:chipSpacingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:selectionRequired="false"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipDuelist"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duelist" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_Sentinel"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sentinel" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipInitiator"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initiator" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipController"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controller" />
    </com.google.android.material.chip.ChipGroup>
</androidx.constraintlayout.widget.ConstraintLayout>